--- a/main.tex
+++ b/main.tex
@@ -291,6 +291,33 @@ Agora, temos todas as definições e lemas que serão necessários para nosso al
     Seja max$(H)$ o maior valor de uma aresta em um grafo $H$ com peso nas arestas. Seja $i'$ o valor de $i$ ao final do algoritmo e $M_{i'}$ a solução devolvida por ele. Como $M_{i'}$ é um conjunto independente maximal, então pelo Lema~\ref{lemma:2.8} ele é um $k$-conjunto dominante e como $M_{i'}$ é um subgrafo de $G_{i'}^2$ então max$(M_{i'}) \leq \text{max}(G_{i'}^2) $. Pela desigualdade triangular, é fácil notar que max$(G_{i'}^2) \leq 2$  max$(G_{i})$. \\Assim, max$(M_{i'}) \leq $ max$(G_{i'}^2) \leq 2$ max$(G_{i'}) \leq 2$ max$(G_{i^*})= 2 \opt(I)$. 
 \end{proof}
 \newpage
+\section{Localização de instalações}
+Antes de falarmos sobre algoritmos de aproximação para o problema da localização de instalações, vamos mostrar que, assumindo $P\not=\NP$, não existe algoritmo polinomial que resolva nosso problema, ou seja, vamos mostrar que nosso problema é $\NP$-difícil. Para isso, vamos definir o problema da cobertura por vértices.
+
+\begin{definition}
+    Seja $G = (V,E)$ um grafo. Um conjunto $S \subseteq V$ é uma \emph{cobertura por vértices} de $G$ se para toda aresta $e \in E$ pelo menos um extremo de $e$ pertencem a $S$.
+\end{definition}
+
+
+\begin{problem}(Cobertura por vértices)
+    Dado um grafo $G$ e um inteiro $k$, decidir se $G$ contém um conjunto $S \subseteq V$ que é uma cobertura por vértices de tamanho $k$.
+\end{problem}
+Esse problema é $\NP$-completo, sendo um dos famosos $21$ problemas do Karp~\cite{Karp1972}. Usaremos este problema para mostrar que o problema localização de instalações é $\NP$-difícil.
+
+\begin{theorem}
+    O problema da localização de instalações é $\NP$-difícil.
+\end{theorem}
+
+\begin{proof}
+    Suponha que exista um algoritmo $A$ que resolve o problema da localização de instalações em tempo polinomial. \\
+    Seja $I(G,c)$ uma instância do problema da cobertura por vértices em que $G = (V,E)$. Vamos criar uma instância $I'(F,D,c',f)$ do problema de localização de instalações a partir de $I$.\\
+    O conjunto de possíveis instalações a serem abertas $F$ será o conjunto de vértices $V$. O conjunto de clientes $D$ será o conjunto de arestas $E$. O custo de abertura $f_i$ será 1 para cada instalação $i$. O custo de atribuição $c_{ij} \text{, para } i \in F \text{ e } j \in D$, será 0 caso o vértice referente a $i$ seja extremo da aresta referente a $j$ e 2 caso contrário. \\
+    A reposta ótima será a menor quantidade de instalações que precisamos abrir até que todos os clientes estejam atribuídos a instalações em que o seu custo de atribuição seja 0. Se um cliente está atribuído a uma instalação cujo custo de atribuição é 2, podemos diminuir o custo total abrindo uma instalação que o custo de sua atribuição seja 0, uma vez que abrir a instalação custaria 1 e diminuiríamos o custo de atribuição do cliente de 2 para 0. Sabemos que essa instalação existe, pois cada cliente contém duas instalações com custo de atribuição 0. \\
+    Assim, é fácil notar que esse é o tamanho mínimo de uma cobertura por vértices em $G$. Portanto, se o custo total da solução do algoritmo $A$ aplicado a instância $I'$ é menor ou igual a $k$, então a resposta para $I$ é sim. Caso contrário, a resposta é não. \\
+    Portanto, resolvemos o problema da cobertura de vértices em tempo polinomial, o que, assumindo $P\not=\NP$, é um absurdo.
+\end{proof}
+\newpage
+
 \bibliographystyle{plain}
 \bibliography{aprox.bib}
 
