atualizado introdução e facility pelo feedback, falta revisar de maneira mais atenciosa

--- a/aprox.bib
+++ b/aprox.bib
@@ -122,6 +122,16 @@ journal = {Mathematics of Operations Research (MOR)},
 doi = {10.1287/moor.10.2.180}
 }
 
+@article{Chudak2003,
+  title={Improved Approximation Algorithms for the Uncapacitated Facility Location Problem},
+  author={Fabi{\'a}n A. Chudak and David B. Shmoys},
+  journal={SIAM J. Comput.},
+  year={2003},
+  volume={33},
+  pages={1-25},
+  url={https://api.semanticscholar.org/CorpusID:27800827}
+}
+
 @article{GONZALEZ1985293,
 title = {Clustering to minimize the maximum intercluster distance},
 journal = {Theoretical Computer Science},
@@ -209,4 +219,13 @@ keywords = {approximation algorithms, k-median, dependent rounding, facility loc
   year = 1979
 }
 
-
+@article{Kha79,
+  author = {L. G. Khachiyan},
+  title = {A polynomial algorithm in linear programming},
+  journal = {Dokl. Akad. Nauk SSSR},
+  year = {1979},
+  url = {http://mi.mathnet.ru/dan42319},
+  mrnumber = {0522052},
+  mathscinet = {http://mathscinet.ams.org/mathscinet-getitem?mr=0522052},
+  zentralblatt = {https://zbmath.org/?q=an:0414.90086}
+}
