--- a/main.tex
+++ b/main.tex
@@ -78,7 +78,7 @@ Problemas de otimização têm o objetivo de encontrar um ponto ótimo de uma fu
 
 Nesse contexto, algoritmos de aproximação surgiram. A ideia é abrir mão de encontrar soluções ótimas para encontrar, eficientemente, uma solução cujo valor garante uma relação pré-estabelecida com o valor ótimo. 
 
-Clustering refere-se a uma classe de problemas de otimização cujo objetivo é agrupar objetos de maneira que objetos no mesmo cluster apresentam mais semelhanças quando comparados a objetos em clusters diferentes. Tais semelhanças serão definidas pelo problema em questão. Neste projeto, iremos estudar, sob o ponto de vista de algoritmos de aproximação, três problemas de clustering $\NP$-difíceis: localização de instalações, $k$-mediana e $k$-centros. 
+Clustering refere-se a uma classe de problemas de otimização cujo objetivo é agrupar objetos de maneira que objetos no mesmo cluster apresentem mais semelhanças quando comparados a objetos em clusters diferentes. Tais semelhanças serão definidas pelo problema em questão. Neste projeto, iremos estudar, sob o ponto de vista de algoritmos de aproximação, três problemas de clustering $\NP$-difíceis: localização de instalações, $k$-mediana e $k$-centros. 
 
 Localização de instalações é um problema que visa determinar a melhor localização para instalações, como fábricas ou depósitos, com base no custo de abertura das instalações e custos de transporte. Além disso, pode ser modelado para outras aplicações como problemas de posicionamento de caches em um computador ou problemas de projeto de redes.
 
@@ -92,7 +92,7 @@ Assim como no localização de instalações, no problema $k$-mediana temos um g
 
 No problema dos $k$-centros não existe essa diferenciação entre instalações que podem ser abertas e clientes, teremos cidades e escolheremos $k$ delas para construir instalações.
 
-Então, temos um grafo $G(V,E)$ completo em que $V$ são cidades e temos um custo $c_{e}$ para associar as cidades que são extremos de $e$. Temos também um inteiro $k$ que representa a quantidade de cidades em que uma instalação será aberta. Cada cidade será associada a uma cidade com uma instalação aberta com menor custo de associação entre elas. O objetivo do nosso problema é diminuir o maior custo de associação entre uma cidade qualquer e a cidade a qual ela está associada.
+Então, temos um grafo $G(V,E)$ completo em que $V$ são cidades e temos um custo $c_{e}$ para associar as cidades que são extremos de $e$. Temos também um inteiro $k$ que representa a quantidade de cidades em que uma instalação será aberta. Cada cidade será associada a uma cidade com uma instalação aberta com menor custo de associação entre elas. O objetivo do nosso problema é minimizar o maior custo de associação entre uma cidade qualquer e a cidade a qual ela está associada.
 
 
 
@@ -218,7 +218,7 @@ O resultado acima pode ser adaptado para dar um resultado mais forte de inaproxi
         Senão, suponha sem perda de generalidade que $C_{i-1} = \{ u_1,u_2,\ldots,u_{i-1}\}$ é o $C$ ao final da iteração $i-1$ e cada $u_j$ está em um cluster diferente de $C^*$. Seja $u_i$ o vértice escolhido na iteração $i$ e suponha que ele está no mesmo cluster que um vértice $u_j$ para algum $j=1,\ldots,i-1$. Então, $c(u_i,C_{i-1}) \leq c(u_iu_j) \leq 2\opt(I)$. Como $u_i$ maximiza $c(v,C_{i-1})$, então raio$(C) \leq 2\opt(I)$.
     \end{proof}
     Esse algoritmo é de autoria de Gonzalez~\cite{GONZALEZ1985293}.
-    Vamos mostrar que essa análise é justa, ou seja, existe uma instância $I(G,d,k)$ em que o algoritmo devolve uma solução $C$ tal que raio$(C) = 2 \opt(I)$. \\
+    Vamos mostrar que essa análise é justa, ou seja, existe uma instância $I(G,c,k)$ em que o algoritmo devolve uma solução $C$ tal que raio$(C) = 2 \opt(I)$. \\
     O grafo $G$ contém pelo menos $k+2$ vértices e as arestas têm custo 1 ou 2. O grafo induzido pelas arestas de custo 1 é uma estrela, como mostrado na figura abaixo.
     \[
     \begin{tikzpicture}
@@ -249,7 +249,7 @@ O resultado acima pode ser adaptado para dar um resultado mais forte de inaproxi
       \end{tikzpicture}
       \] \\
       Claramente, o raio de uma resposta ótima dessa instância é 1 e inclui o vértice do centro da estrela como um dos centros de cluster. \\
-      Note que se, no algoritmo guloso, o vértice escolhido arbitrariamente for algum dos vértices da ponta dessa estrela o vértice do centro nunca será escolhido. Assim, serão escolhidos apenas vértices da ponta da estrela e como temos pelo menos $k+1$ delas, sempre existirá um vértice ligado ao centro do seu cluster com uma aresta de custo 2.
+      Note que se, no algoritmo guloso, o vértice escolhido arbitrariamente for algum dos vértices da ponta dessa estrela o vértice do centro nunca será escolhido, uma vez que ele nunca maximizará a função $c(j,C)$. Assim, serão escolhidos apenas vértices da ponta da estrela e como temos pelo menos $k+1$ delas, sempre existirá um vértice ligado ao centro do seu cluster com uma aresta de custo 2.
 \newpage
 
 
@@ -305,9 +305,9 @@ Agora, temos todas as definições e lemas que serão necessários para nosso al
 \end{theorem}
 \begin{proof}
     Primeiro vamos mostrar que o algoritmo é polinomial. \\
-    Como $G_{i^*}$ tem um $k$-conjunto dominante, então o loop vai parar no máximo quando $i=i^*$, pois pelo Lema~\ref{lemma:2.10} qualquer conjunto independente maximal encontrado em $G_{i^*}^2$ terá tamanho no máximo $k$.
+    Como $G_{i^*}$ tem um $k$-conjunto dominante, então o laço vai iterar no máximo $i^*$ vezes, pois pelo Lema~\ref{lemma:2.10} qualquer conjunto independente maximal encontrado em $G_{i^*}^2$ terá tamanho no máximo $k$.
     Também é fácil mostrar que é possível encontrar um conjunto independente maximal em tempo polinomial. Um algoritmo simples que começa com um conjunto $A = \{u\}$ sendo $u$ um vértice arbitrário e, a cada iteração, é colocado em $A$ um vértice que não é adjacente a nenhum vértice de $A$ até não ser mais possível é suficiente. \red{Faço um lema para explicar melhor?}\\
-    Além disso, também conseguimos construir o grafo $G_i^2$ em tempo polinomial. Começaremos $E_i^2$ como uma cópia de $E_i$ e, para cada tripla de vértice $(u,v,k)$ caso já não exista uma aresta $uk \in E_i$, vamos inseri-la em $E_i^2$ se $v,k \in E_i$. Como tempos no máximo $|V|^3$ triplas de vértices e todas as operações que serão feitas são feitas em tempo polinomial, então podemos construir $G_i^2$ em tempo polinomial. \\
+    Além disso, também conseguimos construir o grafo $G_i^2$ em tempo polinomial. Começaremos $E_i^2$ como uma cópia de $E_i$ e, para cada tripla de vértice $(u,v,k)$ caso já não exista uma aresta $uk \in E_i$, vamos inseri-la em $E_i^2$ se $uv,vk \in E_i$. Como temos no máximo $|V|^3$ triplas de vértices e todas as operações que serão feitas são feitas em tempo polinomial, então podemos construir $G_i^2$ em tempo polinomial. \\
     Agora, vamos mostrar que é uma $2$-aproximação. \\
     Seja max$(H)$ o maior valor de uma aresta em um grafo $H$ com peso nas arestas. Seja $i'$ o valor de $i$ ao final do algoritmo e $M_{i'}$ a solução devolvida por ele. Como $M_{i'}$ é um conjunto independente maximal de tamanho no máximo $k$, então pelo Lema~\ref{lemma:2.8} ele é um $k$-conjunto dominante e como $M_{i'}$ é um subgrafo de $G_{i'}^2$ então max$(M_{i'}) \leq \text{max}(G_{i'}^2) $. Pela desigualdade triangular, é fácil notar que max$(G_{i'}^2) \leq 2$  max$(G_{i})$. \\Assim, max$(M_{i'}) \leq $ max$(G_{i'}^2) \leq 2$ max$(G_{i'}) \leq 2$ max$(G_{i^*})= 2 \opt(I)$. 
 \end{proof}
@@ -334,24 +334,24 @@ Esse problema é $\NP$-completo, sendo um dos famosos $21$ problemas do Karp~\ci
 \begin{proof}
     Suponha que exista um algoritmo $A$ que resolva o problema localização de instalações em tempo polinomial. \\
     Seja $I(G,k)$ uma instância do problema da cobertura por vértices em que $G = (V,E)$. Vamos criar uma instância $I'(F,D,c,f)$ do problema de localização de instalações a partir de $I$.\\
-    O conjunto de possíveis instalações a serem abertas $F$ será o conjunto de vértices $V$. O conjunto de clientes $D$ será o conjunto de arestas $E$. O custo de abertura $f_i$ será 1 para cada instalação $i$. O custo de atribuição $c_{ij} \text{, para } i \in F \text{ e } j \in D$, será 0 se o vértice referente a $i$ é extremo da aresta referente a $j$ e 2 caso contrário. \\
-    A resposta ótima será a menor quantidade de instalações que precisamos abrir até que todos os clientes possam ser atribuídos a instalações em que o seu custo de atribuição é 0. Se um cliente está atribuído a uma instalação cujo custo de atribuição é 2, podemos diminuir o custo total abrindo uma instalação em que o custo de sua atribuição é 0, uma vez que abrir a instalação custaria 1 e diminuiríamos o custo de atribuição do cliente de 2 para 0. Sabemos que essa instalação existe, pois cada para cliente existem duas instalações com custo de atribuição 0. \\
+    O conjunto de possíveis instalações a serem abertas $F$ será o conjunto de vértices $V$. O conjunto de clientes $D$ será o conjunto de arestas $E$. O custo de abertura $f_i$ será 1 para cada instalação $i$. O custo de associação $c_{ij} \text{, para } i \in F \text{ e } j \in D$, será 0 se o vértice referente a $i$ é extremo da aresta referente a $j$ e 2 caso contrário. \\
+    A resposta ótima será a menor quantidade de instalações que precisamos abrir até que todos os clientes possam ser associados a instalações em que o seu custo de associação é 0. Se um cliente está associado a uma instalação cujo custo de associação é 2, podemos diminuir o custo total abrindo uma instalação em que o custo de sua associação é 0, uma vez que abrir a instalação custaria 1 e diminuiríamos o custo de associação do cliente de 2 para 0. Sabemos que essa instalação existe, pois para cada cliente existem duas instalações com custo de associação 0. \\
     Assim, é fácil notar que esse é o tamanho mínimo de uma cobertura por vértices em $G$. Portanto, se o custo total da solução do algoritmo $A$ aplicado a instância $I'$ é menor ou igual a $k$, então a resposta para $I$ é sim. Caso contrário, a resposta é não. \\
     Desse modo, resolvemos o problema da cobertura por vértices em tempo polinomial, o que, assumindo $P\not=\NP$, é um absurdo.
 \end{proof}
 \subsection{Algoritmos baseados em programação linear}
 Nessa seção vamos mostrar dois algoritmos para o problema de localização de instalações: o arredondamento em programa linear e um algoritmo que utiliza o método primal-dual. \\
-Para isso, vamos modelar o nosso problema como um programa linear inteiro. Vamos relaxá-lo e mostrar o seu dual que será usado em ambos os algoritmos. \\
-Nosso programa inteiro terá dois tipos de variáveis: uma variável $y_i$ para cada $i \in F$ que terá valor 1 se a instalação $i$ foi aberta e 0 caso contrário, e uma variável $x_{ij}$ para cada $i \in F$ e $j \in D$ que terá valor 1 se o cliente $j$ estiver atribuído a instalação $i$ e 0 caso contrário. Então o programa inteiro para a instância $I(F,D,c,f)$ é:
+Para isso, vamos modelar o nosso problema como um programa linear inteiro. Vamos relaxá-lo e mostrar o seu dual, que será usado em ambos os algoritmos. \\
+Nosso programa inteiro terá dois tipos de variáveis: uma variável $y_i$ para cada $i \in F$ que terá valor 1 se a instalação $i$ foi aberta e 0 caso contrário, e uma variável $x_{ij}$ para cada $i \in F$ e $j \in D$ que terá valor 1 se o cliente $j$ estiver associado a instalação $i$ e 0 caso contrário. Então o programa inteiro para a instância $I(F,D,c,f)$ é:
 \begin{align}
- \text{Minimize} \quad & \sum_{i \in F}f_iy_i + \sum_{i\in F,j\in D}c_{ij}x_{ij} \\
+ \text{Minimizar} \quad & \sum_{i \in F}f_iy_i + \sum_{i\in F,j\in D}c_{ij}x_{ij} \\
  \text{sujeito a} \quad & \sum_{i\in F} x_{ij}=1, \quad \forall j \in D \\
  &x_{ij} \leq y_i,\quad \quad \; \; \forall i\in F,j\in D\\
  &x_{ij} \in \{0,1\} ,\quad \forall i\in F,j\in D\\
  &y_i \in \{0,1\}, \quad \; \,\forall i\in F.
 \end{align}
 \\
-Para a relaxação, apenas impomos que $x_{ij} \geq 0$ e $y_i \geq 0$ no lugar de (4) e (5), respectivamente. Assim, temos o seguinte primal e dual correspondente à nossa relaxação: \\
+Para a relaxação, apenas impomos que $x_{ij} \geq 0$ e $y_i \geq 0$ no lugar de (4) e (5), respectivamente. Assim, temos o seguinte primal e dual correspondente à nossa relaxação:
     \begin{align}
         \text{Minimizar} \quad & \sum_{i \in F}f_iy_i + \sum_{i\in F,j\in D}c_{ij}x_{ij} \tag{P1} \label{P1}\\
         \text{sujeito a} \quad & \sum_{i\in F} x_{ij}=1,  \forall j \in D \tag{P2} \label{P2}\\
@@ -367,38 +367,38 @@ Para a relaxação, apenas impomos que $x_{ij} \geq 0$ e $y_i \geq 0$ no lugar d
         &w_{ij} \geq 0 ,\quad \forall i\in F,j\in D\tag{D4} \label{D4}\\
         &v_j \geq 0, \quad \; \,\forall j\in D \tag{D5} \label{D5}.
        \end{align}
-Sabemos que cada desigualdade do primal tem uma desigualdade correspondente no dual, assim temos que os pares de desigualdades são correspondentes: (\ref{P2},\ref{D5}), (\ref{P3},\ref{D4}), (\ref{P4},\ref{D3}) e (\ref{P5},\ref{D2}).
+Sabemos que cada desigualdade do primal tem uma desigualdade correspondente no dual, assim temos que os seguintes pares de desigualdades correspondentes: (\ref{P2},\ref{D5}), (\ref{P3},\ref{D4}), (\ref{P4},\ref{D3}) e (\ref{P5},\ref{D2}).
 
 Como o primal é uma relaxação do nosso problema vale que o valor de uma solução ótima dele é no máximo o ótimo do nosso problema.
 
 
 \newpage
 \subsubsection{Arredondamento do programa linear}
-Vamos assumir aqui que a função custo satisfaz a desigualdade triangular. Como a função custo só está definida de um cliente para uma instalação, então a desigualdade triangular terá uma cara diferente. para clientes $j,l$ e  instalações $i,k$, então
+Vamos assumir aqui que a função custo satisfaz a desigualdade triangular. Como a função custo só está definida de um cliente para uma instalação, então a desigualdade triangular terá uma cara diferente. Para clientes $j,l$ e  instalações $i,k$, então
 \[c_{ij} \leq c_{il} + c_{kl} + c_{kj}.\]
 Vamos então definir algumas coisas que serão necessárias no nosso algoritmo.
 \begin{definition}
     Seja $(x^*,y^*)$ uma solução do programa linear. Dizemos que uma instalação $i$ está na \emph{vizinhança} de um cliente $j$ se $x^*_{ij} > 0$. Seja $N(j) = \{ i \in F : x^*_{ij} > 0\}$.
 \end{definition}
-Dada essa definição, vamos enunciar um lema que irá nos ajudar a provar uma cota superior para o custo de conexão da solução aproximada escolhida pelo algoritmo.
+Dada essa definição, vamos enunciar um lema que irá nos ajudar a provar uma cota superior para o custo de associação da solução aproximada escolhida pelo algoritmo.
 \begin{lemma}\label{lemma:3.5}
     Sejam $(x^*,y^*)$ e $(v^*,w^*)$ soluções do programa linear e do seu dual, respectivamente, e $j$ um cliente qualquer. Para todo $i \in N(j)$, $c_{ij} \leq v^*_j$.
 \end{lemma}
 \begin{proof}
     Como $i \in N(j)$, então $x^*_{ij}>0$. Assim, pelas folgas complementares, a desigualdade do dual correspondente a~\ref{P4} vale por igualdade, então $v^*_j - w^*_{ij} = c_{ij}$. Como $w^*_{ij} \geq 0$, $c_{ij} \leq v^*_j$. 
 \end{proof}
-Com esse lema, sabemos que se em um conjunto $S \subseteq F$ de instalações abertas, para todo cliente $j \in D$, existe uma instalação aberta $i$ em $N(j)$, então $c_{ij}\leq v_j^*$ e o custo total de atribuição seria no máximo $\sum_{j\in D}v_j^* \leq \opt$, uma vez que vale a dualidade forte e que o valor do primal é no máximo $\opt(I)$. Entretanto, não é garantido uma cota superior para o custo de abertura de $S$. Vamos descobrir como encontrar um $S$ com um bom custo de abertura e um bom custo de atribuição. Seja $j_k$ um cliente qualquer. Se abrirmos a instalação $i_k$ mais barata de $N(j_k)$ conseguimos limitar o custo de sua abertura.
+Com esse lema, sabemos que se em um conjunto $S \subseteq F$ de instalações abertas, para todo cliente $j \in D$, existe uma instalação aberta $i$ em $N(j)$, então $c_{ij}\leq v_j^*$ e o custo total de associação seria no máximo $\sum_{j\in D}v_j^* \leq \opt(I)$, uma vez que vale a dualidade forte e que o valor do primal é no máximo $\opt(I)$. Entretanto, não é garantido uma cota superior para o custo de abertura de $S$. Vamos descobrir como encontrar um $S$ com um bom custo de abertura e um bom custo de associação. Seja $j_k$ um cliente qualquer. Se abrirmos a instalação $i_k$ mais barata de $N(j_k)$ conseguimos limitar o custo de sua abertura.
 \[\tag{*} \label{relx_fl:*}
     f_{i_k} = f_{i_k} \sum_{i \in N(j_k)}x^*_{ij_k} = \sum_{i \in N(j_k)}f_{i_k}x^*_{ij_k} \leq \sum_{i \in N(j_k)}f_{i}y^*_{i},
 \]
-onde a primeira desigualdade por \ref{P3} e pela definição de $N(j_k)$ e a segunda desigualdade vale por termos escolhido $i_k$ como a instalação mais barata de $N(j_k)$.
+onde a primeira igualdade vale por \ref{P3} e pela definição de $N(j_k)$ e a desigualdade vale por termos escolhido $i_k$ como a instalação mais barata de $N(j_k)$.
 
 Essa informação será importante para a prova da razão de aproximação do nosso algoritmo. Agora, faremos uma última definição necessária para o nosso algoritmo.
 
 \begin{definition}
     Seja $j\in D$ um cliente. Seja $N^2(j)$ o conjunto dos clientes $i \in D$ tais que $N(i) \cap N(j) \not = \emptyset$.
 \end{definition}
-Agora, vamos definir o algoritmo. Nele, $S$ será o conjunto das instalações a serem abertas e $\sigma : D \rightarrow F $ a função que atribui cada cliente a uma instalação aberta. Ambos serão montados durante o algoritmo.
+Agora, vamos definir o algoritmo. Nele, $S$ será o conjunto das instalações a serem abertas e $\sigma : D \rightarrow F $ a função que associa cada cliente a uma instalação aberta. Ambos serão montados durante o algoritmo.
 \begin{algorithm}
     \begin{algorithmic}[1]
         \Function{CS}{$F,D,c,f$}
@@ -410,13 +410,13 @@ Agora, vamos definir o algoritmo. Nele, $S$ será o conjunto das instalações a
         \State Escolha $j_k \in C$ que minimize $v_j^*$
         \State Escolha $i_k \in N(j_k)$ que minimize $f_{i}$
         \State $S \gets S \cup \{i_k\}$
-        \For{\text{Para todo $j \in N^2(j_k) \cap C$}}
-        \State $\sigma(j) \leftarrow i_k$.
+        \For{\text{todo $j \in N^2(j_k) \cap C$}}
+        \State $\sigma(j) \leftarrow i_k$
         \EndFor
         \State $C \gets C \setminus N^2(j_k)$
         \State $k \gets k+1$
         \EndWhile
-        \State Devolva $S$ e $\sigma$.
+        \State Devolva $S$ e $\sigma$
         \EndFunction
     \end{algorithmic}
 \end{algorithm}
@@ -430,14 +430,14 @@ Agora, vamos definir o algoritmo. Nele, $S$ será o conjunto das instalações a
     Perceba que, para $k_1$ e $k_2$ com $k_1 < k_2$, $N(j_{k_1})\cap N(j_{k_2}) = \emptyset$, caso contrário $j_{k_2} \in N^2(j_{k_1})$ e seria retirado de $C$ na iteração $k_1$.\\
     Seja $F' \subseteq F$, tal que $F' = \bigcup_k N(j_k)$.
     Por (\ref{relx_fl:*}), vale que $f_{i_k} \leq \sum_{i \in N(j_k)}f_{i_k}y^*_{i}$. Então se somarmos para todo $k$, temos
-    \[ \sum_kf_{i_k} \leq \sum_k \sum_{i \in N(j_k)}f_{i_k}y^*_{i} = \sum_{i \in F'}f_{i_k}y^*_{i} \leq \sum_{i \in F}f_{i}y^*_{i} \leq \opt(I)\]
-    Agora, vamos fixar uma iteração $k$ e sejam $i = i_k$ e $j = j_k$. Denotemos por $C_k$ o conjunto $C$ no início da iteração $k$. Pelo Lema~\ref{lemma:3.5}, sabemos que $c_{ij} \leq v^*_j$ para $j \in C_k$. Seja $\ell \in N^2(j) \cap C_k \setminus \{j\}$ e $h \in N(\ell) \cap N(j)$. Pela desigualdade triangular e como $j$ minimiza $v^*_j$ em $C_k$, temos
+    \[ \sum_kf_{i_k} \leq \sum_k \sum_{i \in N(j_k)}f_{i}y^*_{i} = \sum_{i \in F'}f_{i}y^*_{i} \leq \sum_{i \in F}f_{i}y^*_{i} \leq \opt(I)\]
+    Agora, vamos fixar uma iteração $k$ e sejam $i = i_k$ e $j = j_k$. Denotemos por $C_k$ o conjunto $C$ no início da iteração $k$. Pelo Lema~\ref{lemma:3.5}, sabemos que $c_{ij} \leq v^*_j$. Seja $\ell \in N^2(j) \cap C_k \setminus \{j\}$ e $h \in N(\ell) \cap N(j)$. Pela desigualdade triangular e como $j$ minimiza $v^*_j$ em $C_k$, temos
     \[ c_{i\ell} \leq c_{ij} + c_{hj} + c_{h\ell} \leq v_j^* + v_j^* + v_{\ell}^* \leq 3 v_{\ell}^*
         \]
     Isso vale para todo $\ell \in D$, então
     \[\sum_{j\in D} c_{\sigma(j)j} \leq 3 \sum_{j \in D} v^*_j \leq 3\opt(I),\]
     onde a segunda desigualdade vale pela dualidade forte e pela relaxação. \\
-    Assim, temos que o custo de abertura das instalações é no máximo $\opt(I)$ e o custo de atribuição é no máximo $3\opt(I)$. Portanto, o custo total da solução $S$ é no máximo $4\opt(I)$.
+    Assim, temos que o custo de abertura das instalações é no máximo $\opt(I)$ e o custo de associação é no máximo $3\opt(I)$. Portanto, o custo total da solução $S$ é no máximo $4\opt(I)$.
 \end{proof}
 O algoritmo aqui apresentado é de autoria de Chudak e Shmoys~\cite{Chudak2003}.
 \newpage
